--- a/public/css/comm.css
+++ b/public/css/comm.css
@@ -3970,6 +3970,23 @@ input[type=button].btn-block,input[type=reset].btn-block,input[type=submit].btn-
     margin-bottom: 0;
     list-style: none
 }
+@keyframes flushHorizontal { 0% {
+    left:0;
+    right:100%;
+    }
+    45% {
+    left:0;
+    right:0;
+    }
+    55% {
+    left:0;
+    right:0;
+    }
+    100% {
+    left:100%;
+    right:0;
+    }
+    }
 
 .nav-link {
     display: block;
