--- a/public/css/comm.css
+++ b/public/css/comm.css
@@ -4454,8 +4454,9 @@ input[type=button].btn-block,input[type=reset].btn-block,input[type=submit].btn-
 }
 
 .navbar-light .navbar-toggler {
-    color: rgba(0,0,0,.5);
-    border-color: rgba(0,0,0,.1)
+    color: #fff;
+    /*border-color: rgba(0,0,0,.1);*/
+    border-color: #fff;
 }
 
 .navbar-light .navbar-toggler-icon {
