--- a/public/css/comm.css
+++ b/public/css/comm.css
@@ -19,21 +19,8 @@ html {
     width: device-width
 }
 
-article,aside,figcaption,figure,footer,header,hgroup,main,nav,section {
+article,aside,figcaption,figure,footer,header,hgroup,main,section {
     display: block
-}
-
-body {
-    margin: 0;
-    font-family: Nunito,sans-serif,"微軟正黑體";
-    font-size: .9rem;
-    font-weight: 400;
-    line-height: 1.6;
-    color: #212529;
-    text-align: left;
-    background-color: #f8fafc;
-
-
 }
 
 [tabindex="-1"]:focus {
@@ -3959,7 +3946,7 @@ input[type=button].btn-block,input[type=reset].btn-block,input[type=submit].btn-
         transition: none
     }
 }
-
+/*
 .nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3970,6 +3957,7 @@ input[type=button].btn-block,input[type=reset].btn-block,input[type=submit].btn-
     margin-bottom: 0;
     list-style: none
 }
+*/
 @keyframes flushHorizontal { 0% {
     left:0;
     right:100%;
