--- a/public/css/comm3.css
+++ b/public/css/comm3.css
@@ -11,11 +11,16 @@ html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -ms-overflow-style: scrollbar;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    
 }
 
 @-ms-viewport {
     width: device-width
+}
+
+li{
+    list-style: none
 }
 
 article,
@@ -33,7 +38,7 @@ section {
 
 body {
     margin: 0;
-    font-family: Nunito, sans-serif;
+    font-family: Nunito, sans-serif,微軟正黑體;
     font-size: .9rem;
     font-weight: 400;
     line-height: 1.6;
@@ -1087,12 +1092,12 @@ pre code {
         max-width: 58.3333333333%
     }
 
-    .col-md-8 {
+    /*.col-md-8 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 66.66666667%;
         flex: 0 0 66.66666667%;
         max-width: 66.66666667%
-    }
+    }*/
 
     .col-md-9 {
         flex: 0 0 75%;
@@ -1927,7 +1932,7 @@ select.form-control:focus::-ms-value {
     padding-top: calc(.375rem + 1px);
     padding-bottom: calc(.375rem + 1px);
     margin-bottom: 0;
-    font-size: inherit;
+    font-size: 20px;
     line-height: 1.6
 }
 
@@ -1987,7 +1992,8 @@ textarea.form-control {
 }
 
 .form-group {
-    margin-bottom: 1rem
+    margin-bottom: 1rem;
+    
 }
 
 .form-text {
@@ -3246,7 +3252,7 @@ input[type=submit].btn-block {
     padding: .25rem 1.5rem;
     clear: both;
     font-weight: 400;
-    color: #212529;
+    color: #000;
     text-align: inherit;
     white-space: nowrap;
     background-color: transparent;
@@ -3255,16 +3261,16 @@ input[type=submit].btn-block {
 
 .dropdown-item:focus,
 .dropdown-item:hover {
-    color: #16181b;
+    color: #fff;
     text-decoration: none;
-    background-color: #f8f9fa
+    background-color: #545b62;
 }
 
 .dropdown-item.active,
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #3490dc
+    background-color: #545b62
 }
 
 .dropdown-item.disabled,
@@ -3704,7 +3710,7 @@ input[type=submit].btn-block {
 
 .custom-select {
     display: inline-block;
-    width: 100%;
+    width: 50%;
     height: calc(2.19rem + 2px);
     padding: .375rem 1.75rem .375rem .75rem;
     line-height: 1.6;
@@ -4026,7 +4032,7 @@ input[type=submit].btn-block {
 
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-    color: #495057;
+    color: #818182;
     background-color: #f8fafc;
     border-color: #dee2e6 #dee2e6 #f8fafc
 }
@@ -4401,18 +4407,18 @@ input[type=submit].btn-block {
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: rgba(0, 0, 0, 0.3)
+    color: rgba(94, 82, 82, 0.2)
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
-    color: rgba(0, 0, 0, .3)
+    color: rgba(94, 82, 82, 0.2)
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
-    color: rgba(0, 0, 0, .4)
+    color: rgba(94, 82, 82, 0.2)
 }
 
 .navbar-light .navbar-toggler {
@@ -9477,8 +9483,7 @@ a.text-dark:hover {
 .main_1{
     margin-top: 10px;
     margin-bottom: 10px;
-    /*position: relative;*/
-    background-color: rgba(101,103,101,0.3);
+    background-color: rgb(230, 230, 230);
     height: 980px;
     
     
