--- a/public/css/subtest.css
+++ b/public/css/subtest.css
@@ -74,6 +74,33 @@
 	transition: opacity 0s linear;
 	transition-delay: 0.3s;
 }
+
+
+.baikuflush {
+	position: absolute;
+	display: table;
+	font-style: normal;
+}
+.baikuflush a {
+	opacity: 0;
+	transition: opacity 0.5s linear;
+	display: block;
+}
+.baikuflush:after {
+	content: '';
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	background-color: #000;
+}
+.baikuflush.baikuflushRun:after { animation: flushHorizontal 0.6s cubic-bezier(0.02, 0.88, 0.58, 1); }
+
+.baikuflush.baikuflushRun a {
+	opacity: 1;
+	transition: opacity 0s linear;
+	transition-delay: 0.3s;
+}
+
 /*
 .cnflush {
 	position: relative;
